--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.6.2",
     "date-fns": "^3.0.4",
     "react": "^18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
